--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -22,5 +22,5 @@
   },
   "include": [
     "src"
-, "src/App.test.tsx", "src/App.tsx", "src/main.tsx", "src/react-app-env.d.ts", "src/reportWebVitals.ts", "src/setupTests.ts"  ]
+, "src/App.test.tsx", "src/App.tsx", "src/index.tsx", "src/react-app-env.d.ts", "src/reportWebVitals.ts", "src/setupTests.ts"  ]
 }
